fixed spacing issue

--- a/todolist/src/styles.css
+++ b/todolist/src/styles.css
@@ -15,7 +15,7 @@ mat-selection-list {
 .main-content {
   height: calc(100% - 60px);
   width: 100%;
-  display: inline-block;
+  display: flex;
 }
 
 .sidenav-container {
@@ -30,5 +30,4 @@ mat-selection-list {
 .nav-content {
   width: 40em;
   flex: 1;
-  float: right;
 }
